# qrcode

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  cliff.toml  compose.proxy.yaml  compose.yaml  justfile  pyproject.toml  zensical.toml
.codex/: config.toml
.github/: dependabot.yml
.github/workflows/: dockerhub-description.yml  docs.yml  images.yml  quality.yml  security.yml
changelogs/: README.md
config/: dependency-licenses.toml
deploy/: nginx.conf
docs/: dependency-licenses.md  deployment.md  development.md  getting-started.md  index.md  user-guide.md
frontend/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  App.test.ts  forms.test.ts  forms.ts  main.ts  styles.css  test-setup.ts
plan/: roadmap.md  scope.md
scripts/: __init__.py  bump_version.py  changelog_tools.py  check_commit_title.py  check_dependency_licenses.py  compose_cli.sh  compose_smoke.sh  dependency_upgrades.py  deployment_test.sh  extract_release_notes.py  outdated_dependencies.sh  proxy_smoke.sh  run_dev.sh  setup.sh  stale_dependencies.sh  tag_release.py  upgrade_dependencies.sh  validate_release.py
src/qrcode_web/: __init__.py  app.py  errors.py  exports.py  logos.py  payloads.py  render_jobs.py  rendering.py  tokens.py  visuals.py
tests/: test_api.py  test_changelog_tools.py  test_dependency_upgrades.py  test_exports.py  test_logos.py  test_payloads.py  test_resource_privacy.py
(+1 files in other folders)
